examples/test/testpolicy17991.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17991
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key37: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value39
          key7: value18
          key14: value8
      podSelector:
        matchLabels:
          key4: value33
          key2: value41
          key11: value18
